# ai-studio-project

./: .dockerignore  .env.example  .gitignore  CDK_DEPLOYMENT_LOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  prompt.md  spec-kit-prompt.md
backend/: .dockerignore  .env.aws-integration  .env.aws-integration.example  .env.e2e.example  .env.example  CC-Memory.md  CLAUDE.md  CODE_OPTIMIZATION_IMPLEMENTATION.md  CODE_OPTIMIZATION_REPORT.md  Dockerfile  OPTIMIZATION_SUMMARY.md  T041-IMPLEMENTATION-SUMMARY.md  alembic.ini  my-prompts.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/.claude/: project-config.md
backend/.claude/rules/: api-design.md  architecture.md  checklist.md  logging.md  observability.md  project-structure.md  sdk-first.md  security.md  tech-stack.md  testing.md
backend/.serena/: project.yml
backend/alembic/: README  env.py
backend/alembic/versions/: 001_create_users.py  002_create_resource_quotas.py  002b_create_resource_limit_configs.py  003_create_audit_logs.py  004_create_development_spaces.py  005_training_job_state_constraints.py  20251230_001_users_teams_projects.py  20251230_002_training_jobs.py  20251230_003_model_management.py  20260101_004_add_kueue_fields.py  20260101_005_add_retry_fields.py  20260114_221056_206d5baf77c1_create_core_tables_users_resource_.py  20260114_221209_7778e77de8a6_create_training_job_state_transition_.py  20260114_225426_a743f443fb73_add_auth_fields_and_tables.py  20260115_100000_create_training_jobs.py  20260115_100100_create_checkpoints.py  20260115_100200_create_models.py  20260115_100300_add_auto_resume_checkpoint_id.py  20260125_100000_create_job_templates.py  20260125_100100_9a1b2c3d4e5f_create_datasets.py  20260126_100000_create_hyperpod_clusters.py  20260126_100100_create_upload_sessions.py  20260222_100000_add_hyperpod_job_arn.py  20260222_100100_fix_enum_case_and_audit.py  20260222_100200_add_soft_delete_and_unique_constraint.py  20260222_100300_revert_enum_to_uppercase.py  20260222_100400_fix_enum_values_to_lowercase.py  20260612_100000_add_checkpoint_trigger_type.py  20260613_140000_add_space_backend_fields.py  20260614_120000_idempotent_enum_lowercase_fix.py
backend/cc-doc/: repository-service-migration-summary.md
backend/cc-doc/plans/: clever-kindling-peach.md  code-optimization-report.md  cryptic-imagining-llama.md  jaunty-snacking-donut.md  polymorphic-discovering-comet.md  purring-humming-toast.md  rippling-growing-dijkstra.md  velvet-popping-cray.md  zany-discovering-wren.md
backend/claudedocs/: code-optimization-summary.md
backend/docs/: ARCHITECTURE.md  CODE_OPTIMIZATION_2025.md  OPTIMIZATION_REPORT.md  T038-implementation-summary.md  checkpoint-migration-deployment.md  checkpoint_quickstart.md  context-guide.md  project-config.template.md
backend/docs/optimization/: training-module-state-management.md
backend/examples/: mlflow_training_example.py
backend/k8s/crds/: training-job-crd.yaml
backend/k8s/deployments/: network-policy-template.yaml  pytorch-job-template.yaml
backend/k8s/kueue/: IMPLEMENTATION_SUMMARY.md  README.md  cluster-queue.yaml  local-queue-template.yaml  workload-priority-classes.yaml
backend/k8s/rbac/: training-operator-rbac.yaml
backend/scripts/: seed_data.py  start_celery.sh
backend/scripts/e2e/: common.sh  setup-env.sh  verify-env.sh
backend/src/: __init__.py  main.py  router.py
backend/src/api/: __init__.py  auth.py  exception_handlers.py  router.py
backend/src/application/: __init__.py
backend/src/clients/: __init__.py  hyperpod_client.py  s3_client.py
backend/src/config/: __init__.py  database.py  logging.py  settings.py  tls.py
backend/src/core/: __init__.py  config.py  database.py  exceptions.py  singleton.py
backend/src/domain/: __init__.py
backend/src/infrastructure/: __init__.py
backend/src/middleware/: __init__.py  audit.py  auth.py  sso.py
backend/src/models/: __init__.py  audit_log.py  base.py  model.py  resource_limit_config.py  resource_quota.py  space.py  training.py  user.py
backend/src/modules/: __init__.py
backend/src/schemas/: __init__.py  error.py
backend/tests/: CLAUDE.md  __init__.py  conftest.py  test_checkpoint_service.py  test_hyperpod_operator.py  test_kueue_integration.py  test_storage_migration.py  test_template_renderer.py
infrastructure/cdk/: .gitignore  .pre-commit-config.yaml  CDK-Pipelines-优势分析.md  CLAUDE.local.md.example  CLAUDE.md  CODE_REFINEMENTS.md  FIXES_SUMMARY.md  IaC-CHECKLIST.md  Makefile  QUICK_START_AFTER_FIXES.md  README.md  VERIFICATION_REPORT.md  app.py  cdk.json  pyproject.toml  requirements.txt
(+1694 files in other folders)
